--- a/.github/workflows/generate.yaml
+++ b/.github/workflows/generate.yaml
@@ -24,10 +24,10 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Run generate.py
+      - name: Run generate2.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: python generate.py
+        run: python generate2.py
 
       - name: Commit changes
         run: |
